<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_user_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/border_left_right"
        android:layout_marginTop="@dimen/top_border"
        android:layout_marginRight="@dimen/border_left_right"
        android:gravity="center"
        android:text="@string/User"
        android:textColor="@color/black"
        android:textSize="@dimen/border_center"
        app:layout_constraintHorizontal_bias="1.1"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/border_left_right"
        android:layout_marginTop="@dimen/text_height"
        android:layout_marginRight="@dimen/border_left_right"
        android:hint="@string/user"
        android:inputType="textPersonName"
        android:textSize="@dimen/text_height"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="@id/text_user_label"
        app:layout_constraintRight_toRightOf="@id/text_user_label"
        app:layout_constraintTop_toBottomOf="@id/text_user_label" />


    <EditText
        android:id="@+id/search"
        android:layout_width="80dp"
        android:layout_height="52dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/ic_baseline_person_pin_24"
        android:drawablePadding="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="10dp"
        android:singleLine="true"
        android:textColor="@color/black"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@id/text_user_label"
        app:layout_constraintRight_toRightOf="@id/text_user_label"
        app:layout_constraintTop_toBottomOf="@id/text_user_label" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/border_left"
        android:layout_marginTop="16dp"
        android:layout_marginRight="@dimen/border_right"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="@dimen/text_height"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@id/search"
        app:layout_constraintRight_toRightOf="@id/search"
        app:layout_constraintTop_toBottomOf="@id/search" />


    <EditText
        android:id="@+id/searchd"
        android:layout_width="70dp"
        android:layout_height="51dp"
        android:layout_marginTop="92dp"
        android:background="@drawable/ic_dd"
        android:backgroundTint="@color/black"
        android:drawablePadding="10dp"
        android:paddingLeft="18dp"
        android:paddingRight="12dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="@dimen/text_height"
        app:layout_constraintHorizontal_bias="0.965"
        app:layout_constraintLeft_toLeftOf="@id/text_user_label"
        app:layout_constraintRight_toRightOf="@id/text_user_label"
        app:layout_constraintTop_toBottomOf="@id/text_user_label"

        tools:ignore="UseAppTint"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="@dimen/text_height"
        android:layout_marginTop="@dimen/text_height"
        app:layout_constraintHorizontal_bias="0.713"
        app:layout_constraintLeft_toLeftOf="@id/editTextTextPassword"
        app:layout_constraintRight_toRightOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>