<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".interface_user.Principal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_user_label1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="60dp"
                android:layout_marginRight="@dimen/border_left_right"
                android:text="@string/user"
                android:textColor="@color/white"
                android:textSize="@dimen/text_height"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextUserName1"
                style="@style/the_inputs"
                android:layout_marginTop="10dp"
                android:hint="@string/user"
                app:layout_constraintLeft_toLeftOf="@id/text_user_label1"
                app:layout_constraintRight_toRightOf="@id/text_user_label1"
                app:layout_constraintTop_toBottomOf="@id/text_user_label1"
                app:startIconContentDescription="@android:string/copyUrl"
                app:startIconDrawable="@drawable/ic_baseline_person_24"
                app:startIconTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name1"
                    style="@style/the_inputs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/contorno"
                    android:inputType="textPersonName"
                    android:textColor="@color/white"></com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/text_user_label3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="180dp"
                android:layout_marginRight="@dimen/border_left_right"
                android:text="@string/apellido"
                android:textColor="@color/white"
                android:textSize="@dimen/text_height"
                app:layout_constraintLeft_toLeftOf="@id/editTextUserName1"
                app:layout_constraintRight_toRightOf="@id/editTextUserName1"
                app:layout_constraintTop_toBottomOf="@id/editTextUserName1"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextUserName3"
                style="@style/the_inputs"
                android:layout_marginTop="10dp"
                android:hint="@string/apellido"
                app:layout_constraintLeft_toLeftOf="@id/text_user_label3"
                app:layout_constraintRight_toRightOf="@id/text_user_label3"
                app:layout_constraintTop_toBottomOf="@id/text_user_label3"
                app:startIconContentDescription="@android:string/copyUrl"
                app:startIconDrawable="@drawable/ic_baseline_dvr_24"
                app:startIconTint="@color/white"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name3"
                    style="@style/the_inputs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/contorno"
                    android:inputType="textPersonName"
                    android:textColor="@color/white">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/text_user_label4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="290dp"
                android:layout_marginRight="@dimen/border_left_right"
                android:text="@string/telfono"
                android:textColor="@color/white"
                android:textSize="@dimen/text_height"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextUserName4"
                style="@style/the_inputs"
                android:layout_marginTop="10dp"
                android:hint="@string/telfono"
                app:layout_constraintLeft_toLeftOf="@id/text_user_label4"
                app:layout_constraintRight_toRightOf="@id/text_user_label4"
                app:layout_constraintTop_toBottomOf="@id/text_user_label4"
                app:startIconContentDescription="@android:string/copyUrl"
                app:startIconDrawable="@drawable/ic_baseline_local_phone_24"
                app:startIconTint="@color/white"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name4"
                    style="@style/the_inputs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/contorno"
                    android:inputType="text|number"
                    android:textColor="@color/white"></com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/text_user_label5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="400dp"
                android:layout_marginRight="@dimen/border_left_right"
                android:text="@string/email"
                android:textColor="@color/white"
                android:textSize="@dimen/text_height"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextUserName5"
                style="@style/the_inputs"
                android:layout_marginTop="10dp"
                android:hint="@string/email"
                app:layout_constraintLeft_toLeftOf="@id/text_user_label5"
                app:layout_constraintRight_toRightOf="@id/text_user_label5"
                app:layout_constraintTop_toBottomOf="@id/text_user_label5"
                app:startIconContentDescription="@android:string/copyUrl"
                app:startIconDrawable="@drawable/ic_baseline_mail_24"
                app:startIconTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name5"
                    style="@style/the_inputs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/contorno"
                    android:inputType="textWebEmailAddress"
                    android:textColor="@color/white">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="80dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/contorno"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:text="A C E P T A R"
                android:textColor="#FFFFFF"
                app:layout_constraintLeft_toLeftOf="@id/editTextUserName5"
                app:layout_constraintRight_toRightOf="@id/editTextUserName5"
                app:layout_constraintTop_toBottomOf="@id/editTextUserName5" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>